@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0
 
+	- Fixed a filename completion bug when changing
+	  directories.
 	- Fl_File_Chooser::value() would return directories with
 	  a trailing slash, but would not accept a directory
 	  without a trailing slash.
